--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 encoding: UTF-8
 url: https://gitpage.reccachao.net
+title: recca chao 的 gitHub page
+description: 寫一些技術文件，筆記，雜七雜八
 enforce_ssl: gitpage.reccachao.net
 theme: jekyll-theme-hacker
