--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,4 @@ title: recca chao 的 gitHub page
 description: 寫一些技術文件，筆記，雜七雜八
 enforce_ssl: gitpage.reccachao.net
 theme: jekyll-theme-hacker
+google_analytics: UA-78953126-2
