--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,9 @@ description: 寫一些技術文件，筆記，雜七雜八
 enforce_ssl: gitpage.reccachao.net
 theme: jekyll-theme-hacker
 google_analytics: UA-78953126-2
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-paginate
+  - jekyll-image-size
