--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 encoding: UTF-8
 url: https://gitpage.reccachao.net
-title: recca chao 的 gitHub page
-description: 寫一些技術文件，筆記，雜七雜八
+title: recca chao 的 gitHub page，推廣各種後端技術，包含 Laravel 和 Kotlin 後端撰寫
+description: 專注 Laravel 和 Kotlin 推廣。 Taiwan Kotlin User Group 管理員。寫一些技術文件，筆記，讀書心得，雜七雜八。推廣各種後端技術
 enforce_ssl: gitpage.reccachao.net
 theme: jekyll-theme-hacker
 google_analytics: UA-78953126-2
