--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 encoding: UTF-8
 url: https://gitpage.reccachao.net
-title: recca chao 的 gitHub page
+title: Recca Chao 的 gitHub page
 tagline: 推廣各種後端技術，包含 Laravel 和 Kotlin 後端撰寫
 description: 專注 Laravel 和 Kotlin 推廣。 Taiwan Kotlin User Group 管理員。寫一些技術文件，筆記，讀書心得，雜七雜八。推廣各種後端技術
 enforce_ssl: gitpage.reccachao.net
