--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ theme: jekyll-theme-hacker
 google_analytics: UA-78953126-2
 logo: /logo.png
 permalink: pretty
+markdown: CommonMarkGhPages
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
