--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ enforce_ssl: gitpage.reccachao.net
 locale: zh_TW
 theme: jekyll-theme-hacker
 google_analytics: UA-78953126-2
-logo: /logo.png
+logo: /logo.jpg
 permalink: pretty
 markdown: CommonMarkGhPages
 plugins:
