--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 encoding: UTF-8
 url: https://gitpage.reccachao.net
 title: Recca Chao 的 gitHub page
-tagline: 推廣各種後端技術，包含 Laravel 和 Kotlin 後端撰寫
-description: 寫些後端開發技術，包含 Laravel 和 Kotlin 後端撰寫、自動化測試、讀書等心得。Taiwan Kotlin User Group 管理員。
+tagline: 推廣網站開發技術，包含 Laravel 和 Kotlin 後端撰寫
+description: 推廣網站開發，包含 Laravel 和 Kotlin 後端撰寫、自動化測試、讀書心得等。Taiwan Kotlin User Group 管理員。
 enforce_ssl: gitpage.reccachao.net
 locale: zh_TW
 theme: jekyll-theme-hacker
