--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,9 @@ google_analytics: UA-78953126-2
 logo: /logo.jpg
 permalink: pretty
 markdown: CommonMarkGhPages
+commonmark:
+  options: ["UNSAFE", "SMART", "FOOTNOTES"]
+  extensions: ["strikethrough", "autolink", "table", "tagfilter"]
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
