--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ google_analytics: UA-78953126-2
 logo: /logo.jpg
 permalink: pretty
 markdown: CommonMarkGhPages
+liker_id: like1lnrh84gjyu8cdcna5q89d9cz6ncwf0ymzgqv0g
 commonmark:
   options: ["UNSAFE", "SMART", "FOOTNOTES"]
   extensions: ["strikethrough", "autolink", "table"]
