--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ theme: jekyll-theme-hacker
 google_analytics: UA-78953126-2
 logo: /logo.jpg
 permalink: pretty
-markdown: CommonMarkGhPages
+markdown: GFM
 liker_id: recca_chao
 commonmark:
   options: ["UNSAFE", "SMART", "FOOTNOTES"]
